- EStream.java: Remove assertions since these are not compatible with Java 9